k8s/plain/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: project-atlas
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: docker.io/xgalvanize/project-atlas-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8000
