k8s/plain/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: project-atlas
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
