k8s/plain/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: project-atlas
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
